--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="title" content="Light" />
   <meta name="description" content="A fast, simple, and highly customizable proxy." />
   <meta name="google-adsense-account" content="ca-pub-2804638430420139">
-  
+  <title>search anything</title>
   <link rel="stylesheet" id="themecss" href="./assets/css/main.css" />
   <!--UV-->
   <script src="/@/bundle.js"></script>
