--- a/public/index.html
+++ b/public/index.html
@@ -21,35 +21,19 @@
   <script>
     registerSW();
   </script>
-  
+
 </head>
 
 <body class="min-h-screen flex items-center justify-center">
   <form id="uv-form" class="flex flex-col justify-start items-start">
-    <input id="uv-address" type="text" class="px-2 py-1 border-none outline-none rounded-md" maxlength="2048" autocapitalize="off" autocomplete="off"
-      title="Search" role="combobox" placeholder="Search Anything" />
-      <button class="bg-white w-full py-1 mt-2 rounded-md" type="submit">go</button>
+    <input id="uv-address" type="text" class="px-2 py-1 border-none outline-none rounded-md" maxlength="2048"
+      autocapitalize="off" autocomplete="off" title="Search" role="combobox" placeholder="Search Anything" />
+    <button class="bg-white w-full py-1 mt-2 rounded-md" type="submit">go</button>
   </form>
 
 </body>
 <!--Main Scripts-->
 <script src="./assets/js/main.js"></script>
 <script src="./assets/js/index.js"></script>
-<script>
-  let CLF_config = {
-    app_id: "23e8c853-542e-4413-acee-abfe3f85aa5e",
-    data: {
-      user_id: '123456', // required
-      user_email: 'user@email.com', // required
-      user_name: 'User Name', // optional
-      custom_data: {
-        'JobRole': 'CEO', // optional
-        'Plan': 'Pro', // optional
-        'teamMates': '4', // optional
-        'MonthlySpend': '50 USD' // optional
-      }
-    }
-  };
-</script>
 
 </html>
